mail-to-task: Extract text also from HTML-only messages
Steps to reproduce
- Enable
Edit > Plugins > Mail to Task
. - Right click on an email with a non-empty body: Create > create an appointment
- Choose a calendar to store it (I chose a caldav calendar or a local one, same behavior)
Actual behavior:
- The descrption field of the newly created appointment is empty
Expected behavior:
- The description field of the newly created appointment contains the body of the email
Note that it works correctly when doing that with an email stored on an imap server.
evolution-data-server-3.38.4 evolution-3.38.3 evolution-ews-3.38.3 NixOS 20.09
Edited by Milan Crha