I#1388 - mail-to-task: Extract text also from HTML-only messages

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/1388